# django-base

./: Dockerfile  Makefile  README.md  compose.local.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml
project/: settings.py
