[tool.poetry]
name = "django-base"
version = "0.0.1"
description = "\"A streamlined Django project template designed for practical, real-world applications, with essential configurations and best practices integrated out of the box.\""
authors = ["Azat <8280770+azataiot@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.1"
pillow = "^10.2.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
